# Se

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: SeOutputDirectoryStyle.cmake
include/Se/: Algorithms.hpp  Application.hpp  Console.hpp  Debug.h  Exception.hpp  Export.hpp  Extension.hpp  Finally.hpp  FlagSet.hpp  Format.hpp  Hash.hpp  Math.hpp  MultiVector.hpp  Mutex.hpp  NonCopyable.hpp  ProcessTaskManager.h  Profiler.hpp  Signal.hpp  Span.hpp  StopToken.hpp  String.hpp  StringHash.hpp  StringHashRegister.cpp  StringHashRegister.h  Thread.h  Timer.h  TypeTrait.hpp  UUID.h  Value.h  WorkQueue.h
include/Se/IO/: AbstractFile.hpp  Deserializer.hpp  File.h  FileSystem.h  MemoryBuffer.hpp  Package.h  PackageFile.h  ScanFlags.hpp  Serializer.hpp  VectorBuffer.h
include/Se/Platform/: AndroidFile.hpp  InitFPU.hpp
include/Se/Utils/: SystemInfo.hpp
include/SeArc/: Archive.hpp  ArchiveBase.hpp  ArchiveSerialization.hpp  ArchiveSerializationBasic.hpp  ArchiveSerializationContainerSTD.hpp  ArchiveSerializationVariant.hpp
include/SeArcJson/: JSONArchive.cpp  JSONArchive.h  JSONFile.h  JSONValue.h
include/SeArcXml/: JSONFile.cpp  JSONFile.h
include/SeMath/: !Precompiler.hpp  ArchiveMath.hpp  BoundingBox.hpp  BoundingSphere.hpp  Color.hpp  Frustum.hpp  MathDefs.hpp  MathSerializer.hpp  Matrix2.hpp  Matrix3.hpp  Matrix3x4.hpp  Matrix4.hpp  Plane.hpp  Polyhedron.hpp  Quaternion.hpp  Rect.hpp  Sphere.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/SePlatform/: Application.cpp  Application.h  Platform.hpp
include/SeReflection/: Reflected.hpp  TypeInfo.hpp
include/SeReflection/ImGui/: ImScopeGuard.hpp  Inspector.SeMath.hpp  Inspector.hpp
include/SeResource/: Base64Archive.h  BinaryArchive.h  BinaryFile.cpp  BinaryFile.h  Image.h  ImageCube.h  ImageSVG.h  JSONArchive.h  JSONFile.h  JSONValue.h  LangFile.cpp  LangFile.h  Localization.h  LocalizationMMDOC.hpp  LocalizationSAGE.hpp  Resource.h  ResourceCache.h  ResourceRef.hpp  XMLArchive.cpp  XMLArchive.h  XMLElement.h  XMLFile.h  YAMLFile.h
include/SeVFS/: FileIdentifier.cpp  FileIdentifier.h  FileWatcher.cpp  FileWatcher.h  MountPoint.cpp  MountPoint.h  MountedAliasRoot.cpp  MountedAliasRoot.h  MountedDirectory.cpp  MountedDirectory.h  MountedExternalMemory.cpp  MountedExternalMemory.h  MountedPackageFile.hpp  MountedRoot.cpp  MountedRoot.h  VirtualFileSystem.cpp  VirtualFileSystem.h
src/Se/: Debug.cpp  ProcessTaskManager.cpp  Thread.cpp  Timer.cpp  Value.cpp  VectorBuffer.cpp  WorkQueue.cpp
src/Se/IO/: File.cpp  FileSystem.cpp  MacFileWatcher.h  MacFileWatcher.m  Package.cpp  PackageFile.Tool.cpp  PackageFile.cpp
src/SeArcJson/: JSONFile.cpp  JSONValue.cpp
src/SeArcJson/rapidjson/: CMakeLists.txt
src/SeMath/: Vector3.cpp
src/SeResource/: BackgroundLoader.cpp  BackgroundLoader.h  Base64Archive.cpp  BinaryArchive.cpp  Decompress.cpp  Decompress.h  Image.cpp  ImageCube.cpp  ImageSVG.cpp  JSONArchive.cpp  JSONFile.cpp  JSONValue.cpp  Localization.cpp  Resource.cpp  ResourceCache.cpp  ResourceCache.reg.cpp  XMLElement.cpp  XMLFile.cpp  YAMLFile.cpp
src/SeResource/ETCPACK/: CMakeLists.txt
src/SeResource/ETCPACK/source/: image.cxx
src/SeResource/PugiXml/: CMakeLists.txt
src/SeResource/STB/: CMakeLists.txt  stb_image_write.h  stb_truetype.h
tests/: SeTest.hpp  main.cpp  test.LangFile.cpp  test.Reflection.cpp  test.WorkQueue.cpp  test.YAMLFile.cpp
